--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,4 @@
 [build]
-  command = "hugo"
+  command = "hugo --minify"
   publish = "public"
-[build.environment]
-  HUGO_VERSION = "0.87.0"
+  environment = { HUGO_VERSION = "0.87.0" }
