--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
 [build]
-command = "hugo --minify"
-environment = {HUGO_VERSION = "0.87.0"}
+command = "hugo"
 publish = "public"
+[build.environment]
+HUGO_VERSION = "0.87.0"
