--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "tailwindcss": "^2.2.7"
   },
   "dependencies": {
-    "@tailwindcss/aspect-ratio": "^0.2.1"
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "swiper": "^7.4.1"
   }
 }
